# gstreamer

./: .gitignore  .gitmodules  README.txt  glib.vcproj  gmodule.vcproj  gobject.vcproj  gst-opera.rules  gst-opera.sln  gst-opera.vsprops  gstaudioconvert.vcproj  gstaudioresample.vcproj  gstautodetect.vcproj  gstcoreelements.vcproj  gstcoreplugins.vcproj  gstdecodebin2.vcproj  gstdirectsound.vcproj  gstffmpegcolorspace.vcproj  gstoggdec.vcproj  gstreamer.symbols  gstreamer.vcproj  gsttypefindfunctions.vcproj  gstwaveform.vcproj  gstwavparse.vcproj  gstwebmdec.vcproj  gthread.vcproj  libgstaudio.vcproj  libgstautodetect.vcproj  libgstbase.vcproj  libgstbasevideo.vcproj  libgstinterfaces.vcproj  libgstreamer.vcproj  libgstriff.vcproj  libgstvideo.vcproj  libogg.vcproj  libtheora.vcproj  libvorbis.vcproj  libvpx.vcproj  remotes  winddk-crt.vsprops
glib/: .gitignore  Makefile.am  autogen.sh  config.h.win32  config.h.win32.in  configure.in  glibconfig.h.win32  glibconfig.h.win32.in
gst-plugins-bad/: Makefile.am  configure.ac
gst-plugins-base/: Makefile.am  configure.ac
gst-plugins-base/ext/ogg/: Makefile.am  gstogg.c  gstoggdemux.c  gstoggstream.c
gst-plugins-good/: Makefile.am  configure.ac
gstreamer/: Makefile.am
macosx/: Makefile  config.h.macosx  makedist.py
src/: gstcoreplugins.c  gstoggdec.c  gstwebmdec.c  msvc_pragmas.h  theora_info.c  vorbis_info.c
tools/: README.txt  glib-mkenums
unix/: Makefile
vs2010/: glib.vcxproj  glib.vcxproj.filters  gmodule.vcxproj  gmodule.vcxproj.filters  gobject.vcxproj  gobject.vcxproj.filters  gst-opera-rules.props  (+58 more)
(+73 files in other folders)
